# turtlebot3_aws_2021

./: .gitmodules  README.md
browser/: robot_controller.html
browser/css/: controller_style.css
browser/js/: app.js
robot_ws/: .gitignore
robot_ws/src/delivery_robot_sample/nodes/: remote_controller
robot_ws/src/delivery_robot_sample/rviz/: deliverychallenge.rviz
robot_ws/src/turtlebot3/: README.md
robot_ws/src/turtlebot3/turtlebot3_navigation/: CMakeLists.txt  package.xml
robot_ws/src/turtlebot3/turtlebot3_navigation/csv/: waypoint.csv
robot_ws/src/turtlebot3/turtlebot3_navigation/include/turtlebot3_navigation/: WaypointNav.hpp  WaypointNav_AWS.hpp
robot_ws/src/turtlebot3/turtlebot3_navigation/launch/: turtlebot3_navigation.launch
robot_ws/src/turtlebot3/turtlebot3_navigation/maps/: map.pgm
robot_ws/src/turtlebot3/turtlebot3_navigation/param/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot_ws/src/turtlebot3/turtlebot3_navigation/src/: WaypointNav_AWS.cpp  WaypointNav_AWS_node.cpp  waypoint_navigation.cpp
